--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -1,11 +1,13 @@
 .logo{
      width: 60px;
      height: 60px;
+   
 }
 .logo-text{
      font-family: arial;
      font-size: 15px;
      font-weight: 600;
+     cursor: pointer;
 }
 .search-input{
      border: none;
